fixed position mobile cart

--- a/styles/styles_cart.css
+++ b/styles/styles_cart.css
@@ -91,7 +91,234 @@
   nav a:current {
     background-color: rgb(201, 227, 248);
   }
+}
+.product {
+  background-color: rgb(220, 238, 253);
+  max-height: 400px;
+  max-width: 600px;
+  padding-bottom: 100px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.text {
+  margin-left: 10px;
+  display: flex;
+  flex-direction: row;
+  grid-area: text;
+}
 
+main section {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 70%;
+  align-items: center;
+}
+
+.item_1 {
+  background-color: rgb(220, 238, 253);
+}
+.item_3 {
+  background-color: rgb(220, 238, 253);
+}
+
+#jacket_front {
+  height: auto;
+  width: auto;
+  max-width: 100px;
+  max-height: 70px;
+  padding: 10px;
+  grid-area: image;
+  flex: 1;
+}
+main p {
+  flex: 2;
+}
+
+#prize {
+  position: relative;
+  float: right;
+  color: green;
+  flex: 1;
+}
+#remove {
+  flex: 1;
+  max-height: 40px;
+  max-width: 60px;
+  margin-right: 10px;
+}
+
+.buy_now {
+  display: flex;
+  align-items: baseline;
+}
+.buy_now h1 {
+  flex: 1;
+}
+.buy_now p {
+  padding-left: 30px;
+
+  font-weight: bold;
+  flex: 1;
+}
+
+#checkout {
+  min-height: 50px;
+  max-width: 70%;
+  min-width: 70%;
+  background-color: rgb(206, 161, 0);
+  position: relative;
+  left: 15%;
+}
+#checkout a {
+  font-size: 30px;
+  text-decoration: none;
+  color: rgb(0, 51, 51);
+}
+
+#checkout:hover {
+  max-width: 50%;
+  background-color: rgb(214, 202, 160);
+  font-weight: bold;
+}
+footer {
+  height: 100px;
+  background-color: rgb(0, 51, 51);
+  color: white;
+  align-items: center;
+  margin-top: 300px;
+}
+
+footer li {
+  list-style-type: none;
+  display: flex;
+}
+
+footer a {
+  color: white;
+  text-decoration: none;
+}
+.about li {
+  display: inline;
+  padding: 30px;
+  float: left;
+}
+.follow li {
+  float: right;
+  margin-top: 15px;
+  padding: 10px;
+  font-size: 30px;
+  margin-right: 50px;
+}
+footer a:hover {
+  text-decoration: underline;
+}
+.follow li:hover {
+  font-size: 35px;
+}
+
+@media screen and (max-width: 700px) {
+  body {
+    font-family: "roboto condensed", "open sans", "PT sans", verdana;
+    color: rgb(0, 51, 51);
+  }
+
+  .top {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+  }
+
+  .logo {
+    max-width: 20vw;
+    margin-right: auto;
+    margin-left: 10px;
+    margin-top: 10px;
+  }
+
+  #shoppingcart {
+    float: right;
+    font-size: 3vw;
+    margin-right: 20px;
+    color: rgb(0, 51, 51);
+  }
+
+  input[type="text"] {
+    height: 1vw;
+    padding: 10px;
+
+    width: 40%;
+    margin-left: 20%;
+    margin-right: 20px;
+    font-size: 20px;
+    background-color: rgb(206, 161, 0);
+  }
+
+  .wider-item {
+    background-color: rgb(0, 51, 51);
+    text-align: center;
+    font-size: 15px;
+    padding: 10px;
+    color: white;
+    font-weight: 200;
+    margin-top: 4%;
+  }
+
+  .image_adventure {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    border-radius: 8px;
+    margin-bottom: 100px;
+    margin-top: 100px;
+  }
+
+  #hamburger-icon {
+    float: right;
+    margin-right: 25px;
+  }
+
+  #hamburger-menu {
+    float: right;
+    display: none;
+  }
+
+  nav {
+    display: none;
+    background-color: rgb(220, 238, 253);
+    height: 600px;
+    display: none;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    border-radius: 8px;
+    margin-bottom: 20px;
+    margin-top: 40px;
+    position: fixed;
+  }
+  #hamburger-menu:checked ~ nav {
+    display: block;
+  }
+
+  nav li {
+    text-align: center;
+    display: block;
+    padding: 20px;
+  }
+
+  nav a {
+    text-decoration: none;
+    color: white;
+    font-size: 30px;
+    font-weight: normal;
+  }
+
+  nav a:hover {
+    text-decoration: underline;
+    color: rgb(206, 161, 0);
+    font-weight: bold;
+  }
   .product {
     background-color: rgb(220, 238, 253);
     max-height: 400px;
@@ -163,10 +390,11 @@
 
   #checkout {
     min-height: 50px;
-    max-width: 40%;
+    min-width: 70%;
+    max-width: 70px;
     background-color: rgb(206, 161, 0);
-
-    flex: 3;
+    position: relative;
+    left: 15%;
   }
   #checkout a {
     font-size: 30px;
@@ -179,17 +407,18 @@
     background-color: rgb(214, 202, 160);
     font-weight: bold;
   }
+
   footer {
+    margin-top: 100px;
     height: 100px;
     background-color: rgb(0, 51, 51);
     color: white;
-    align-items: center;
-    margin-top: 300px;
   }
 
   footer li {
     list-style-type: none;
-    display: flex;
+    text-align: center;
+    align-content: center;
   }
 
   footer a {
@@ -197,154 +426,15 @@
     text-decoration: none;
   }
   .about li {
-    display: inline;
-    padding: 30px;
-    float: left;
+    padding: 5px;
   }
   .follow li {
-    float: right;
-    margin-top: 15px;
     padding: 10px;
+    padding-top: 5px;
     font-size: 30px;
-    margin-right: 50px;
+    display: inline;
   }
-  footer a:hover {
-    text-decoration: underline;
-  }
-  .follow li:hover {
-    font-size: 35px;
-  }
-
-  @media screen and (max-width: 700px) {
-    body {
-      font-family: "roboto condensed", "open sans", "PT sans", verdana;
-      color: rgb(0, 51, 51);
-    }
-
-    .top {
-      display: flex;
-      justify-content: space-between;
-      align-items: baseline;
-    }
-
-    .logo {
-      max-width: 20vw;
-      margin-right: auto;
-      margin-left: 10px;
-      margin-top: 10px;
-    }
-
-    #shoppingcart {
-      float: right;
-      font-size: 3vw;
-      margin-right: 20px;
-      color: rgb(0, 51, 51);
-    }
-
-    input[type="text"] {
-      height: 1vw;
-      padding: 10px;
-
-      width: 40%;
-      margin-left: 20%;
-      margin-right: 20px;
-      font-size: 20px;
-      background-color: rgb(206, 161, 0);
-    }
-
-    .wider-item {
-      background-color: rgb(0, 51, 51);
-      text-align: center;
-      font-size: 15px;
-      padding: 10px;
-      color: white;
-      font-weight: 200;
-      margin-top: 4%;
-    }
-
-    .image_adventure {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      width: 80%;
-      border-radius: 8px;
-      margin-bottom: 100px;
-      margin-top: 100px;
-    }
-
-    #hamburger-icon {
-      float: right;
-      margin-right: 25px;
-    }
-
-    #hamburger-menu {
-      float: right;
-      display: none;
-    }
-
-    nav {
-      display: none;
-      background-color: rgb(220, 238, 253);
-      height: 600px;
-      display: none;
-      margin-left: auto;
-      margin-right: auto;
-      width: 100%;
-      border-radius: 8px;
-      margin-bottom: 20px;
-      margin-top: 40px;
-      position: fixed;
-    }
-    #hamburger-menu:checked ~ nav {
-      display: block;
-    }
-
-    nav li {
-      text-align: center;
-      display: block;
-      padding: 20px;
-    }
-
-    nav a {
-      text-decoration: none;
-      color: white;
-      font-size: 30px;
-      font-weight: normal;
-    }
-
-    nav a:hover {
-      text-decoration: underline;
-      color: rgb(206, 161, 0);
-      font-weight: bold;
-    }
-
-    footer {
-      margin-top: 100px;
-      height: 100px;
-      background-color: rgb(0, 51, 51);
-      color: white;
-    }
-    footer li {
-      list-style-type: none;
-      text-align: center;
-      align-content: center;
-    }
-
-    footer a {
-      color: white;
-      text-decoration: none;
-    }
-    .about li {
-      padding: 5px;
-    }
-    .follow li {
-      padding: 10px;
-      padding-top: 5px;
-      font-size: 30px;
-      display: inline;
-    }
-    .follow {
-      text-align: center;
-    }
+  .follow {
+    text-align: center;
   }
 }
